fix double scrollbar

--- a/client-app/src/app/student/students.component.css
+++ b/client-app/src/app/student/students.component.css
@@ -5,7 +5,6 @@ table {
 #wrapperDiv {
   
   margin: auto;
-  height: 100%;
   width: 100%;
 }
 
